# idlgen

./: .gitignore  Cheatsheet.md  Contribution.md  LICENSE  README.md  cheat-sheet.md  property.md
.github/workflows/: ci.yaml
dev/: .clang-format  .gitignore  CMakeLists.txt  GenerateIdl.cpp  env.cmake  env.cmake.template
dev/src/: GenIdlAstConsumer.cpp  GenIdlAstConsumer.h  GetHeaderAstConsumer.cpp  GetHeaderAstConsumer.h  IdlgenAstConsumer.cpp  IdlgenAstConsumer.h  IdlgenVisitor.cpp  IdlgenVisitor.h  RuntimeClassVisitor.cpp  RuntimeClassVisitor.h  StripProjectionDeclarationBodyAstConsumer.cpp  StripProjectionDeclarationBodyAstConsumer.h  StripProjectionDeclarationBodyVisitor.cpp  StripProjectionDeclarationBodyVisitor.h  formatter.h  main.cpp  vector_string.h
dev/src/WinRT/: Array.h  ClassMethod.h  Delegate.h  Entity.h  Enum.cpp  Enum.h  EnumFlags.cpp  EnumFlags.h  Interface.cpp  Interface.h  Member.h  Method.cpp  Method.h  Namespace.cpp  Namespace.h  Nullable.h  Primitive.h  Property.h  RuntimeClass.cpp  RuntimeClass.h  Struct.cpp  Struct.h  Type.h
docs/: design.md
extension/Idlgen.Cpp-Vs-2022/: Idlgen.Cpp.sln  README.md  vs-publish.json
nuget/: IdlGen-Cpp-Native.targets  IdlGen-Cpp.props  IdlGen.IdlGen.Cpp.nuspec.template  IdlGenCppRules.Project.xml  README.md
nuget/include/: cpuid.h
sample-app/: .gitignore  Nuget.Config  README.md  SampleApp.sln
sample-app/SampleApp/: .gitignore  App.cpp  App.h  App.idl  App.xaml  BlankPage.author.cpp  BlankPage.author.h  BlankPage.cpp  BlankPage.h  BlankPage.idl  BlankPage.xaml  pch.h  (+20 more)
scripts/: BuildNuget.cs  build-clang.ps1  build-extension.ps1  build-idlgen.ps1  build-nuget.cs  build-nuget.ps1  ci.cs  ci.ps1  clone-llvm.ps1  download-clang-lib.ps1  format.cs  format.ps1  get-msbuild.ps1  get-vcvars.ps1  getWinLibs.cs  make-clang-lib.ps1  populate-build-ninja.ps1  publish-nuget.ps1  run-test-code.ps1  test-sample-app-tasks.ps1  test-sample-app.ps1  test.cs  test.ps1
(+81 files in other folders)
